--- a/nuttx/arch/arm/src/stm32/Kconfig
+++ b/nuttx/arch/arm/src/stm32/Kconfig
@@ -33,7 +33,7 @@ comment "STM32 Configuration Options"
 
 choice
 	prompt "STM32 Chip Selection"
-	default ARCH_CHIP_STM32F103ZE
+	default ARCH_CHIP_STM32L476MG
 	depends on ARCH_CHIP_STM32
 
 config ARCH_CHIP_STM32L151C6
@@ -199,29 +199,470 @@ config ARCH_CHIP_STM32L162ZD
 		STM32L 144-pin EnergyLite, 384KB FLASH, 48KB SRAM, 12KB EEPRROM with
 		8x40 LCD interface
 
+config ARCH_CHIP_STM32L431CB
+	bool "STM32L431CB"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	---help---
+		48-pin, 128KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431KB
+	bool "STM32L431KB"
+	select STM32_STM32L4X3
+	---help---
+	      32-pin, 128KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431KC
+	bool "STM32L431KC"
+	select STM32_STM32L4X3
+	---help---
+		32-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431CC
+	bool "STM32L431CC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	---help---
+		48-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431RB
+	bool "STM32L431RB"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 128KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431RC
+	bool "STM32L431RC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431RE
+	bool "STM32L431RE"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 512KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431RG
+	bool "STM32L431RG"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 1024KB FLASH, 64B SRAM
+
+config ARCH_CHIP_STM32L431VC
+	bool "STM32L431VC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		100-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431VE
+	bool "STM32L431VE"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		100-pin, 512KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L431VG
+	bool "STM32L431VG"
+	select STM32_STM32L4X3
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		100-pin, 1024KB FLASH, 64KB SRAM
+
 config ARCH_CHIP_STM32L433CB
-        bool "STM32L433CB"
-        select ARCH_CORTEXM4
-        select STM32_STM32L4X3
-        select ARCH_HAVE_FPU
+	bool "STM32L433CB"
+	select STM32_STM32L4X3
+	select STM32_HAVE_LCD
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	---help---
+		48-pin, 128KB FLASH, 64KB SRAM
 
 config ARCH_CHIP_STM32L433CC
-        bool "STM32L433CC"
-        select ARCH_CORTEXM4
-        select STM32_STM32L4X3
-        select ARCH_HAVE_FPU
+	bool "STM32L433CC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_LCD
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	---help---
+		48-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L433RB
+	bool "STM32L433RB"
+	select STM32_STM32L4X3
+	select STM32_HAVE_LCD
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 128KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L433RC
+	bool "STM32L433RC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_LCD
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		64-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L433VC
+	bool "STM32L433VC"
+	select STM32_STM32L4X3
+	select STM32_HAVE_LCD
+	select STM32_HAVE_USART3
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	---help---
+		100-pin, 256KB FLASH, 64KB SRAM
+
+config ARCH_CHIP_STM32L476RC
+	bool "STM32L476RC"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		64-pin, 256KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476RE
+	bool "STM32L476RE"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		64-pin, 512KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476RG
+	bool "STM32L476RG"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		64-pin, 1024KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476JE
+	bool "STM32L476JE"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		72-pin, 512KB FLASH, 128KB SRAM
 
 config ARCH_CHIP_STM32L476JG
 	bool "STM32L476JG"
-	select ARCH_CORTEXM4
 	select STM32_STM32L4X6
-	select ARCH_HAVE_FPU
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		72-pin, 1024KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476ME
+	bool "STM32L476ME"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		81-pin, 512KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476MG
+	bool "STM32L476MG (MDK Version)"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		81-pin, 1024B FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476VC
+	bool "STM32L476VC"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		100-pin, 256KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476VE
+	bool "STM32L476VE"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		100-pin, 512KB FLASH, 128KB SRAM
 
 config ARCH_CHIP_STM32L476VG
 	bool "STM32L476VG"
-	select ARCH_CORTEXM4
 	select STM32_STM32L4X6
-	select ARCH_HAVE_FPU
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		100-pin, 1024KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476QE
+	bool "STM32L476QE"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_ADC3
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		132-pin, 512KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476QG
+	bool "STM32L476QG"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_ADC3
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		132-pin, 1024KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476ZE
+	bool "STM32L476ZE"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_ADC3
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		144pin, 512KB FLASH, 128KB SRAM
+
+config ARCH_CHIP_STM32L476ZG
+	bool "STM32L476ZG"
+	select STM32_STM32L4X6
+	select STM32_HAVE_LCD
+	select STM32_HAVE_TIM3
+	select STM32_HAVE_TIM4
+	select STM32_HAVE_TIM5
+	select STM32_HAVE_TIM8
+	select STM32_HAVE_TIM17
+	select STM32_HAVE_OTGFS
+	select STM32_HAVE_USART3
+	select STM32_HAVE_USART4
+	select STM32_HAVE_USART5
+	select STM32_HAVE_ADC2
+	select STM32_HAVE_ADC3
+	select STM32_HAVE_SAI2
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
+	select STM32_HAVE_SDMMC
+	select STM32_HAVE_OPAMP2
+	---help---
+		144pin, 1024KB FLASH, 128KB SRAM.
 
 config ARCH_CHIP_STM32F100C8
 	bool "STM32F100C8"
@@ -678,9 +1119,10 @@ config STM32_ENERGYLITE
 	select STM32_HAVE_TIM11
 	select STM32_HAVE_ADC2
 
-config STM32_STM32L4X3
+config STM32_STM32L4
 	bool
 	default n
+	select ARCH_CORTEXM4
 	select ARCH_HAVE_UID
 	select ARCH_HAVE_CHIPID
 	select ARCH_HAVE_BOARDID
@@ -701,40 +1143,37 @@ config STM32_STM32L4X3
 	select STM32_HAVE_COMP
 	select STM32_HAVE_SAI1
 	select STM32_HAVE_SAI2
+        select STM32_HAVE_OPAMP1
+
+config STM32_STM32L4X3
+	bool
+	default n
+	select STM32_STM32L4
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
 
 config STM32_STM32L4X6
 	bool
 	default n
-	select ARCH_HAVE_UID
-	select ARCH_HAVE_CHIPID
-	select ARCH_HAVE_BOARDID
-	select ARCH_HAVE_RESET_FLAGS
-	select ARCH_HAVE_PROGMEM
+	select STM32_STM32L4
+	select ARCH_HAVE_FPU
+	select STM32_HAVE_SPI3
+	select STM32_HAVE_I2C3
 	select STM32_HAVE_OTGFS
-	select STM32_HAVE_USART3
 	select STM32_HAVE_USART4
 	select STM32_HAVE_USART5
-	select STM32_HAVE_TIM1
-	select STM32_HAVE_TIM2
 	select STM32_HAVE_TIM3
 	select STM32_HAVE_TIM4
 	select STM32_HAVE_TIM5
-	select STM32_HAVE_TIM6
-	select STM32_HAVE_TIM7
 	select STM32_HAVE_TIM8
-	select STM32_HAVE_TIM15
-	select STM32_HAVE_TIM16
 	select STM32_HAVE_TIM17
-	select STM32_HAVE_LPTIM1
-	select STM32_HAVE_LPTIM2
 	select STM32_HAVE_ADC2
 	select STM32_HAVE_ADC3
-	select STM32_HAVE_CAN1
-	select STM32_HAVE_RNG
-	select STM32_HAVE_RTC_SUBSECONDS
-	select STM32_HAVE_COMP
-	select STM32_HAVE_SAI1
-	select STM32_HAVE_SAI2
+
+config STM32_STM32L4X1
+	bool
+	default n
+	select STM32_STM32L4
 
 config STM32_STM32F10XX
 	bool
@@ -1198,6 +1637,26 @@ config STM32_HAVE_SAI2
 	bool
 	default n
 
+config STM32_HAVE_SPI3
+	bool
+	default n
+
+config STM32_HAVE_I2C3
+	bool
+	default n
+
+config STM32_HAVE_LCD
+	bool
+	default n
+
+config STM32_HAVE_OPAMP2
+	bool
+	default n
+
+config STM32_HAVE_SDMMC
+	bool
+	default n
+
 # These are the peripheral selections proper
 
 config STM32_ADC1
@@ -1226,7 +1685,7 @@ config STM32_ADC4
 config STM32_ADC_INIT
 	bool "ADC Device Initialization"
 	default n
-	depends on ADC
+	depends on STM32_ADC
 	---help---
 		Create a /dev/adcX for each ADC device.
 
@@ -1288,7 +1747,7 @@ endif
 
 if STM32_ADC_INIT
 if STM32_ADC2
-menu "ADC3 Device Initialization"
+menu "ADC2 Device Initialization"
 
 config STM32_ADC2_CHAN0_INIT
 	bool "ADC2 Channel 0"
@@ -1344,7 +1803,7 @@ endif
 
 if STM32_ADC_INIT
 if STM32_ADC3
-menu "ADC1 Device Initialization"
+menu "ADC3 Device Initialization"
 
 config STM32_ADC3_CHAN0_INIT
 	bool "ADC3 Channel 0"
@@ -1559,7 +2018,7 @@ config STM32_I2C2
 config STM32_I2C3
 	bool "I2C3"
 	default n
-	depends on STM32_STM32F207 || STM32_STM32F40XX || STM32_STM32L4X6 || STM32_STM32L4X3
+	depends on STM32_STM32F207 || STM32_STM32F40XX || STM32_HAVE_I2C3
 	select STM32_I2C
 
 config STM32_LTDC
@@ -1608,6 +2067,7 @@ config STM32_RNG
 config STM32_SAI1_A
 	bool "SAI1 Block A"
 	default n
+	depends on STM32_HAVE_SAI1
 	select AUDIO
 	select I2S
 	select SCHED_WORKQUEUE
@@ -1616,6 +2076,7 @@ config STM32_SAI1_A
 config STM32_SAI1_B
 	bool "SAI1 Block B"
 	default n
+	depends on STM32_HAVE_SAI1
 	select AUDIO
 	select I2S
 	select SCHED_WORKQUEUE
@@ -1624,6 +2085,7 @@ config STM32_SAI1_B
 config STM32_SAI2_A
 	bool "SAI2 Block A"
 	default n
+	depends on STM32_HAVE_SAI2
 	select AUDIO
 	select I2S
 	select SCHED_WORKQUEUE
@@ -1632,6 +2094,7 @@ config STM32_SAI2_A
 config STM32_SAI2_B
 	bool "SAI2 Block B"
 	default n
+	depends on STM32_HAVE_SAI2
 	select AUDIO
 	select I2S
 	select SCHED_WORKQUEUE
@@ -1640,7 +2103,7 @@ config STM32_SAI2_B
 config STM32_SDIO
 	bool "SDIO"
 	default n
-	depends on !STM32_CONNECTIVITYLINE && !STM32_VALUELINE
+	depends on (!STM32_CONNECTIVITYLINE && !STM32_VALUELINE) || (STM32_STM32L4 && STM32_HAVE_SDMMC)
 	select ARCH_HAVE_SDIO
 	select SDIO_PREFLIGHT
 
@@ -1653,14 +2116,14 @@ config STM32_SPI1
 config STM32_SPI2
 	bool "SPI2"
 	default n
-	depends on STM32_CONNECTIVITYLINE || STM32_STM32F207 || STM32_STM32F40XX || (STM32_VALUELINE && STM32_HIGHDENSITY) || (STM32_STM32F10XX && (STM32_HIGHDENSITY || STM32_MEDIUMDENSITY)) || STM32_STM32F30XX || STM32_STM32L4X6 || STM32_STM32L4X3
+	depends on STM32_CONNECTIVITYLINE || STM32_STM32F207 || STM32_STM32F40XX || (STM32_VALUELINE && STM32_HIGHDENSITY) || (STM32_STM32F10XX && (STM32_HIGHDENSITY || STM32_MEDIUMDENSITY)) || STM32_STM32F30XX || STM32_STM32L4
 	select SPI
 	select STM32_SPI
 
 config STM32_SPI3
 	bool "SPI3"
 	default n
-	depends on STM32_CONNECTIVITYLINE || STM32_STM32L15XX || STM32_STM32F207 || STM32_STM32F40XX || (STM32_VALUELINE && STM32_HIGHDENSITY) || (STM32_STM32F10XX && STM32_HIGHDENSITY) || STM32_STM32L4X6 || STM32_STM32L4X3
+	depends on STM32_CONNECTIVITYLINE || STM32_STM32L15XX || STM32_STM32F207 || STM32_STM32F40XX || (STM32_VALUELINE && STM32_HIGHDENSITY) || (STM32_STM32F10XX && STM32_HIGHDENSITY) || STM32_HAVE_SPI3
 	select SPI
 	select STM32_SPI
 
@@ -1698,14 +2161,17 @@ config STM32_TIM1
 config STM32_TIM2
 	bool "TIM2"
 	default n
+	depends on STM32_HAVE_TIM2
 
 config STM32_TIM3
 	bool "TIM3"
 	default n
+	depends on STM32_HAVE_TIM3
 
 config STM32_TIM4
 	bool "TIM4"
 	default n
+	depends on STM32_HAVE_TIM4
 
 config STM32_TIM5
 	bool "TIM5"
@@ -1850,7 +2316,7 @@ config STM32_USB
 config STM32_LCD
 	bool "Segment LCD"
 	default n
-	depends on STM32_STM32L15XX
+	depends on STM32_STM32L15XX || STM32_HAVE_LCD
 
 config STM32_IWDG
 	bool "IWDG"
@@ -2064,7 +2530,7 @@ endmenu
 
 config STM32_FLASH_PREFETCH
 	bool "Enable FLASH Pre-fetch"
-	depends on STM32_STM32F207 || STM32_STM32F40XX || STM32_STM32L4X6 || STM32_STM32L4X3
+	depends on STM32_STM32F207 || STM32_STM32F40XX || STM32_STM32L4
 	default y if STM32_STM32F427 || STM32_STM32F429 || STM32_STM32F446
 	default n
 	---help---
